<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.walla.tipbreeze.AboutActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:text="@string/thank_you_for_choosing_tipbreeze"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome"
        android:text="@string/free_tip_calculation_app"
        android:textSize="18sp"
        android:layout_marginBottom="120dp"/>

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/description"
        android:text="@string/credit_by_wallace_zhen"/>

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/credit"
        android:layout_height="wrap_content"
        android:text="@string/www_wallacezhen_com"
        android:autoLink="web"/>

</RelativeLayout>
